[gd_scene load_steps=2 format=3 uid="uid://d2xoqu6l0w0lt"]

[ext_resource type="Script" uid="uid://ckgmnoecjbgi4" path="res://upgrades/upgrade_card/upgrade_card.gd" id="1_3cpsx"]

[node name="UpgradeCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -653.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cpsx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.35906908, 0.35906908, 0.35906908, 1)

[node name="UpgradeNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "UPG_NAME"

[node name="UpgradeDescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 75.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "UPG_DESCRIPTION"
autowrap_mode = 3

[node name="UpgradeTextureTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="ApplyEffectButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[connection signal="pressed" from="ApplyEffectButton" to="." method="_apply_upgrade"]
